src/parser/snapshots/simp__parser__tests__tests__inputs__valid__expr_after_block.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
ExprInt {
    value: 0,
}
