src/parser/snapshots/simp__parser__tests__tests__inputs__valid__expr_block_with_semi.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
