src/parser/snapshots/simp__parser__tests__tests__inputs__valid__expr_int.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprInt {
    value: 0,
}
ExprInt {
    value: 1234,
}
